--- a/demo.html
+++ b/demo.html
@@ -101,6 +101,7 @@
             loadAmrFile.setAttribute('disabled', true);
             playBtn.setAttribute('disabled', true);
             stopBtn.setAttribute('disabled', true);
+            rate.setAttribute('disabled', true);
             progressCtrl.setAttribute('disabled', true);
             amr.initWithUrl('./res/mario.amr').then(function () {
                 loadDemoBtn.removeAttribute('disabled');
