--- a/demo-en.html
+++ b/demo-en.html
@@ -28,6 +28,17 @@
             <span id="amr-duration">0'</span>
         </label>
     </p>
+    <p>
+        <span>play speed</span>
+        <label>
+            <select id="rateSelect" disabled>
+                <option value="1">1x</option>
+                <option value="1.5">1.5x</option>
+                <option value="2.0">2.0x</option>
+                <option value="0.75">0.75x</option>
+            </select>
+        </label>
+    </p>
 </div>
 <h2>Record & Encode</h2>
 <div id="recorder-amr">
@@ -60,6 +71,7 @@
         var isDragging = false;
         var cur = E('#amr-cur');
         var duration = E('#amr-duration');
+        var rate = E('#rateSelect')
 
         setInterval(function () {
             if (amr) {
@@ -72,18 +84,31 @@
             }
         }, 10);
 
+        rate.onchange = function (e) {
+            amr.setPlaybackRate(parseFloat(e.target.value))
+
+            if (amr.isPlaying()) {
+                amr.pause()
+                setTimeout(function () {
+                    amr.resume();
+                }, 30)
+            }
+        }
+
         loadDemoBtn.onclick = function() {
             amr = new BenzAMRRecorder();
             loadDemoBtn.setAttribute('disabled', true);
             loadAmrFile.setAttribute('disabled', true);
             playBtn.setAttribute('disabled', true);
             stopBtn.setAttribute('disabled', true);
+            rate.setAttribute('disabled', true);
             progressCtrl.setAttribute('disabled', true);
             amr.initWithUrl('./res/mario.amr').then(function () {
                 loadDemoBtn.removeAttribute('disabled');
                 loadAmrFile.removeAttribute('disabled');
                 playBtn.removeAttribute('disabled');
                 stopBtn.removeAttribute('disabled');
+                rate.removeAttribute('disabled');
                 progressCtrl.removeAttribute('disabled');
                 progressCtrl.setAttribute('max', amr.getDuration());
                 duration.innerHTML = amr.getDuration().toFixed(2) + '\'';
